Separate app installation into separate script. Add discord to Brewfile.

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -12,7 +12,9 @@ brew 'python3'
 brew 'sass/sass/sass'
 brew 'ispell'
 brew 'npm'
+brew 'ffmpeg'
 
+cask 'discord'
 cask 'spacemacs'
 cask 'visual-studio-code'
 cask 'firefox-nightly'
