Add fish config files.

--- a/macOS/setupScripts/Brewfile
+++ b/macOS/setupScripts/Brewfile
@@ -7,17 +7,21 @@ tap 'homebrew/services'
 brew 'vim'
 brew 'emacs'
 brew 'tmux'
+brew 'zstd'
 brew 'git'
 brew 'python3'
 brew 'sass/sass/sass'
 brew 'ispell'
 brew 'npm'
 brew 'ffmpeg'
+brew 'ruby'
+brew 'mono'
 
+cask 'whatsapp'
 cask 'discord'
 cask 'spacemacs'
 cask 'visual-studio-code'
-cask 'firefox-nightly'
+cask 'firefox'
 cask 'vlc'
 cask 'dropbox'
 cask 'docker'
