Helix: render indent guides

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -3,5 +3,8 @@ theme = "base16_terminal"
 [editor]
 auto-pairs = false
 
+[editor.indent-guides]
+render = true
+
 [editor.file-picker]
 hidden = false
